<resources>
    <string name="app_name">Google Image Searcher</string>
    <string name="enter_search_prompt">Enter image search</string>
    <string name="search_button">Search</string>
    <string name="image_title_label">Image Title</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search_options">SearchOptionsActivity</string>
    <string name="search_options_label">Advanced Search Options</string>
    <string name="image_size_label">Image Size</string>
    <string name="color_filter_label">Color Filter</string>
    <string name="image_type_label">Image Type</string>
    <string name="site_filter_label">Site Filter</string>
    <string name="save_settings">Save</string>
    <string name="reset_settings">Reset</string>
    <string name="cancel_settings">Cancel</string>
    <string-array name="image_size_array">
        <item></item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
    </string-array>
    <string-array name="color_filter_array">
        <item></item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="image_type_array">
        <item></item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
</resources>
